<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
xmlns:android="http://schemas.android.com/apk/res/android">


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Screens.Noticias"
    android:background="@drawable/background_menu">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <ImageView
            android:id="@+id/imageViewSelectedImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="50dp"
            app:layout_constraintBottom_toTopOf="@id/buttonAddImage" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonAddImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/botao_adicionar_imagem"
            app:layout_constraintTop_toBottomOf="@id/imageViewSelectedImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="100dp" />

        <EditText
            android:id="@+id/editTitulo"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/texto_titulo"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/buttonAddImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            style="@style/edit_Text"
            android:maxLength="999999999"
            />

        <EditText
            android:id="@+id/editTextContent"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:hint="@string/botao_editar_texto"
            android:gravity="center"
            android:textColor="@color/black"
            android:inputType="textMultiLine"
            app:layout_constraintTop_toBottomOf="@id/editTitulo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:padding="16dp"
            style="@style/edit_Text"
            android:maxLength="999999999"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_publicar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button2"
            android:text="@string/botao_publicar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editTextContent"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_notificar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:text="@string/botao_notificar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_publicar"
            />


        <Button
            android:id="@+id/addnews"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/bt_add"
            app:layout_constraintTop_toBottomOf="@id/bt_notificar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp" />


        <LinearLayout
            android:id="@+id/containercomponents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="@id/addnews"
            app:layout_constraintStart_toEndOf="@id/addnews"
            app:layout_constraintTop_toBottomOf="@id/addnews">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="270sp"
                android:layout_height="100sp"
                style="@style/Texts_noticias"
                android:maxLines="2"
                android:ellipsize="end"
                android:layout_alignParentTop="true"
                android:layout_marginEnd="130dp"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/publicImage"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:layout_toStartOf="@id/textViewTitulo" />


        </LinearLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>